--- a/index.html
+++ b/index.html
@@ -3,16 +3,15 @@
   <head>
     <meta charset="utf-8" />
     <title>VoronaAdmin</title>
-    <base href="/" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <base href="”https://voronacarmaster.github.io/admin/”">    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="manifest" href="manifest.webmanifest" />
     <meta name="theme-color" content="#7D4CDB" />
-  </head>
+  <link rel="stylesheet" href="styles.0312087da6fa7cfb3ec8.css"></head>
   <body>
     <app-root></app-root>
     <noscript
       >Please enable JavaScript to continue using this application.</noscript
     >
-  <script src="runtime-es2015.js" type="module"></script><script src="runtime-es5.js" nomodule defer></script><script src="polyfills-es5.js" nomodule defer></script><script src="polyfills-es2015.js" type="module"></script><script src="styles-es2015.js" type="module"></script><script src="styles-es5.js" nomodule defer></script><script src="vendor-es2015.js" type="module"></script><script src="vendor-es5.js" nomodule defer></script><script src="main-es2015.js" type="module"></script><script src="main-es5.js" nomodule defer></script></body>
+  <script src="runtime-es2015.1eba213af0b233498d9d.js" type="module"></script><script src="runtime-es5.1eba213af0b233498d9d.js" nomodule defer></script><script src="polyfills-es5.9e286f6d9247438cbb02.js" nomodule defer></script><script src="polyfills-es2015.690002c25ea8557bb4b0.js" type="module"></script><script src="main-es2015.e0206f0638361ca1b4b7.js" type="module"></script><script src="main-es5.e0206f0638361ca1b4b7.js" nomodule defer></script></body>
 </html>
