--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>New</title>
-    <base href="https://voronacarmaster.github.io/admin">    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <base href="https://voronacarmaster.github.io/admin/">    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="manifest" href="manifest.webmanifest" />
     <meta name="theme-color" content="#7D4CDB" />
