--- a/404.html
+++ b/404.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>VoronaAdmin</title>
-    <base href="https://voronacarmaster.github.io/admin/">
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <base href="https://voronacarmaster.github.io/admin/">    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="manifest" href="manifest.webmanifest" />
     <meta name="theme-color" content="#7D4CDB" />
@@ -14,5 +13,5 @@
     <noscript
       >Please enable JavaScript to continue using this application.</noscript
     >
-  <script src="runtime-es2015.1eba213af0b233498d9d.js" type="module"></script><script src="runtime-es5.1eba213af0b233498d9d.js" nomodule defer></script><script src="polyfills-es5.9e286f6d9247438cbb02.js" nomodule defer></script><script src="polyfills-es2015.690002c25ea8557bb4b0.js" type="module"></script><script src="main-es2015.439e19c7c6c779758086.js" type="module"></script><script src="main-es5.439e19c7c6c779758086.js" nomodule defer></script></body>
+  <script src="runtime-es2015.1eba213af0b233498d9d.js" type="module"></script><script src="runtime-es5.1eba213af0b233498d9d.js" nomodule defer></script><script src="polyfills-es5.9e286f6d9247438cbb02.js" nomodule defer></script><script src="polyfills-es2015.690002c25ea8557bb4b0.js" type="module"></script><script src="main-es2015.5dfe87225c4d3027313e.js" type="module"></script><script src="main-es5.5dfe87225c4d3027313e.js" nomodule defer></script></body>
 </html>
